--- a/config/sphinx.conf
+++ b/config/sphinx.conf
@@ -33,15 +33,33 @@ index rt_files {
 
         rt_field = originalname
 
-        rt_attr_uint = newname
+        rt_attr_uint = gid
 }
- 
+
+
+source filescomplete: base
+{
+
+    sql_query           = select id,originalname from files
+    sql_field_string    = originalname
+}
+
+index filescomplete
+{
+    source              = filescomplete
+    path                = /var/lib/sphinxsearch/data//filescomplete_idx
+    docinfo             = extern
+    charset_type        = utf-8
+    min_word_len        = 3
+    enable_star         = 1
+    min_prefix_len      = 3
+}
+
 
 indexer
 {
 	mem_limit		= 128M
 }
- 
  
 searchd
 {
