Switch to PostgreSQL

--- a/config/sphinx.conf
+++ b/config/sphinx.conf
@@ -1,14 +1,13 @@
 source base
 {
-	type			= mysql
+	type			= pgsql
  
 	sql_host		= localhost
 	sql_user		= root
 	sql_pass		= password
 	sql_db			= filehosting
-	sql_port		= 3306	# optional, default is 3306
+	sql_port		= 5432	# optional, default is 3306
  
-	sql_query_pre		= SET NAMES utf8
 }
  
 source src_files: base
@@ -64,7 +63,7 @@ indexer
 searchd
 {
 	listen			= 9312
-	listen			= 9306:mysql41
+	listen			= 127.0.0.1:9306:mysql41
 	log			= /var/lib/sphinxsearch/log/searchd.log
 	query_log		= /var/lib/sphinxsearch/log/query.log
 	read_timeout		= 5
